# custom-pyod

./: pyproject.toml
custom_pyod/: __init__.py  utils.py
custom_pyod/models/: __init__.py  base.py  copod.py  ecod.py
tests/: test_models.py
