[project]
name = "custom-pyod"
version = "0.1.0"
description = "COPOD and ECOD implementation using Polars"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "polars>=0.20.0",
    "numpy>=1.21.0",
    "scikit-learn>=0.24.2",
    "scipy>=1.7.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
